# TraceHound

./: .env.example  .env.server.example  .gitignore  Dockerfile.gpu  Makefile  README.md  docker-compose.gpu.yml  environment.gpu.yml  environment.yml  pyproject.toml
configs/: agentdog_data_flows.yaml  agentdog_official.yaml  generation.yaml  generation_agentdog_llm.yaml  model_profiles.json
data/: synthetic_eval.jsonl  synthetic_preference.jsonl  synthetic_rl.jsonl  synthetic_sft.jsonl
data/release/AgentDoG-Lite-TrainningDataset-Binary/: README.md
data/release/AgentDoG-Lite-TrainningDataset-Binary/metadata/: eval_alignment_report.json  manifest.json  quality_report.json
data/release/AgentDoG1.0-FineGrained-Unsafe-SourceReason-1000/: annotations.jsonl
data/release/AgentDoG1.0-FineGrained-Unsafe-SourceReason-1000/metadata/: manifest.json  quality_report.json  rejected_annotations.jsonl
data/release/AgentDoG1.0-FineGrained-Unsafe-SourceReason-1000/metadata/_source_reason_checkpoints/: state.json
docs/: agentdog_official_reproduction.md  contest_playbook.md  design.md  imported_agentdog_assets.md  intern_model_playbook.md  online_guardrail_integrations.md  remote_gpu_deploy.md  slurm_cluster_usage.md  training_gpu.md
docs/hf_model_cards/: AgentDoG-Qwen3.5-0.8B-6Label.md  TraceHound-Base-Qwen3.5-0.8B-Binary.md  TraceHound-Qwen3.5-0.8B-Lite-Binary-LoRA.md  TraceHound-Qwen3.5-0.8B-Unified-Full-SFT.md
examples/: demo_cases.json
examples/integrations/: codex_guardrail_wrapper.py  openclaw_guardrail_middleware.py
integrations/claude_code/: settings.tracehound.example.json
prompts/agentdog/v1.0/: trajectory_binary.txt
scripts/: __init__.py  bootstrap_remote.sh  build_agentdog_data.py  build_agentdog_finegrained_source_reason.py  build_agentdog_lite_binary.py  convert_dataset.py  create_deploy_bundle.sh  enchant_safety.py  evaluate.py  evaluate_lite_binary_model.py  generate_data.py  generate_report.py  gpu_doctor.py  guardrail_hook.py  imported_agentdog_workflows.py  install_claude_code_hooks.py  install_miniconda_linux.sh  list_model_profiles.py  prepare_agentdog_official.py  quality_check.py  run_experiments.py  run_qwen_lite_binary_lora.sh  run_remote_demo.sh  serve_demo.py  slurm_gpu_test.sh  slurm_run.sh  smoke_remote.sh  sync_remote.sh  train_lite_binary_lora.py  train_preference.py  train_sft.py  train_unified_full_sft.py  validate_api.py
tests/: test_agentdog_data.py  test_agentdog_finegrained_source_reason.py  test_agentdog_lite_binary.py  test_agentdog_official.py  test_chat_format.py  test_claude_code_hooks.py  test_compressor.py  test_config.py  test_cost.py  test_data_quality.py  test_dataset_layout.py  test_dataset_ops.py  test_demo_dataset_batch.py  test_enchantment.py  test_evaluation.py  test_generation_config.py  test_guardrail_gateway.py  test_json_utils.py  test_lite_binary_eval.py  test_llm_generation.py  test_local_binary_guard.py  test_model_profiles.py  test_production_strategy.py  test_rules.py  test_schema.py  test_taxonomy.py  test_unified_sft.py
traceguard/: __init__.py  agentdog_data.py  agentdog_finegrained_source_reason.py  agentdog_lite_binary.py  agentdog_official.py  chat_format.py  claude_code_hooks.py  compressor.py  config.py  cost.py  data.py  dataset_layout.py  dataset_ops.py  demo_app.py  enchantment.py  evaluation.py  export.py  fallback_server.py  generation_config.py  guard.py  guardrail_gateway.py  json_utils.py  judge.py  lite_binary_eval.py  llm_generation.py  local_model.py  model_profiles.py  pipeline.py  production.py  prompts.py  quality.py  reporting.py  rules.py  schema.py  taxonomy.py  unified_sft.py
web_demo/: app.js  index.html  styles.css  tracehound-project-poster-a4.html  tracehound-project-poster.html
