[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracehound"
version = "0.1.0"
description = "Cost-aware and trainable guardrail baseline for agent trajectory safety."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "fastapi>=0.110",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
train = [
  "accelerate>=0.33",
  "peft>=0.12",
  "protobuf>=4.25",
  "sentencepiece>=0.2",
  "transformers>=4.48",
]
preference = [
  "datasets>=2.20",
  "trl>=0.9",
]
official = [
  "huggingface_hub>=0.24",
]
qlora = [
  "bitsandbytes>=0.42; platform_system == 'Linux'",
]

[project.scripts]
tracehound-generate = "scripts.generate_data:main"
tracehound-evaluate = "scripts.evaluate:main"
tracehound-validate-api = "scripts.validate_api:main"
tracehound-demo = "scripts.serve_demo:main"
tracehound-quality = "scripts.quality_check:main"
tracehound-experiments = "scripts.run_experiments:main"
tracehound-report = "scripts.generate_report:main"
tracehound-convert = "scripts.convert_dataset:main"
tracehound-agentdog-official = "scripts.prepare_agentdog_official:main"
tracehound-build-agentdog-data = "scripts.build_agentdog_data:main"
tracehound-build-agentdog-lite-binary = "scripts.build_agentdog_lite_binary:main"
tracehound-build-agentdog-finegrained-source-reason = "scripts.build_agentdog_finegrained_source_reason:main"
tracehound-train-lite-binary-lora = "scripts.train_lite_binary_lora:main"
tracehound-evaluate-lite-binary-model = "scripts.evaluate_lite_binary_model:main"
tracehound-model-profiles = "scripts.list_model_profiles:main"
tracehound-enchant-safety = "scripts.enchant_safety:main"
tracehound-guardrail-hook = "scripts.guardrail_hook:main"
tracehound-install-claude-hooks = "scripts.install_claude_code_hooks:main"

[tool.setuptools]
packages = ["traceguard", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
